GNOME Bugzilla – Bug 777979
Vulkan fails to build on i386
Last modified: 2017-02-02 10:42:07 UTC
Got this when building the freedesktop sdk on i386: vkwindow.c: In function ‘gst_vulkan_window_get_surface’: vkwindow.c:229:561: error: return makes integer from pointer without a cast [-Werror=int-conversion] vkwindow.c:231:194: error: return makes integer from pointer without a cast [-Werror=int-conversion] cc1: all warnings being treated as errors Makefile:1135: recipe for target 'libgstvulkan_la-vkwindow.lo' failed make[4]: *** [libgstvulkan_la-vkwindow.lo] Error 1 make[4]: Leaving directory '/run/build-runtime/gstreamer-plugins-bad/ext/vulkan' Makefile:1154: recipe for target 'all-recursive' failed
commit d7bb3b55425b8b6f910fb331046757947896f9dc Author: Matthew Waters <matthew@centricular.com> Date: Wed Feb 1 16:05:23 2017 +1100 vkwindow: fix build error on i386 Vulkan handles are either pointers (64-bit) or 64-bit integer handles (32-bit). Cast the type in failure cases. vkwindow.c:229:561: error: return makes integer from pointer without a cast [-Werror=int-conversion] vkwindow.c:231:194: error: return makes integer from pointer without a cast [-Werror=int-conversion] https://bugzilla.gnome.org/show_bug.cgi?id=777979